<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:adjustViewBounds="true"
    android:background="@drawable/splash_bg"
    tools:context=".ui.profil.ProfilFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:alpha="0.9"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="148dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="65dp"
                android:layout_marginEnd="13dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/profil_bg_round"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <ImageView
                        android:id="@+id/img_foto"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/foto" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/text_view_nama"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_toRightOf="@id/img_foto"
                            android:includeFontPadding="false"
                            android:text="@string/nama"
                            android:textColor="@android:color/white"
                            android:textSize="20dp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/text_view_nim"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/text_view_nama"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_toRightOf="@id/img_foto"
                            android:includeFontPadding="false"
                            android:text="@string/nim"
                            android:textColor="@android:color/white"
                            android:textSize="14dp" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="485dp"
            android:background="@drawable/white_round_atas"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="NIM">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_nim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_fiber_pin"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:text="@string/nim"
                    android:textColor="#474747" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Nama Lengkap">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/profile_nama"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person_pin"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:text="@string/nama"
                    android:textColor="#474747" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Kelas">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_class"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:id="@+id/profile_kelas"
                    android:focusable="false"
                    android:text="@string/kelas"
                    android:textColor="#474747" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Deskripsi">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_deskrisi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_info"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:text="@string/deskripsi"
                    android:textColor="#474747" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>